--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,15 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  scroll-behavior: smooth;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  width: 100%;
+body {
+  @apply bg-gray-900;
+}
+
+::-webkit-scrollbar {
+  display: none;
 } 
